# sinch-events-server

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
events-server/: .env.example  Dockerfile  pyproject.toml  server.py  sinch_client_helper.py
events-server/conversation_api/: controller.py  server_business_logic.py
events-server/routes/: query_routes.py
events-server/storage/: event_repository.py  message_id_extractor.py
mongodb/: .env.example
